--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "next": "15.1.1",
